<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:navigationIcon="@drawable/ic_cancel_button">

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/main_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="1dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="300dp"
                android:layout_centerHorizontal="true"
                android:layout_height="45dp"
                android:entries="@array/products"
                android:gravity="center_horizontal"
                android:textAlignment="center">

            </Spinner>

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/spinner"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:scaleType="fitCenter"
                android:src="@drawable/cola">

            </ImageView>

            <LinearLayout
                android:id="@+id/counter"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/image"
                android:layout_margin="10dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/count_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:inputType="number"
                    android:text="@string/count"
                    android:paddingLeft="10dp"
                    android:textSize="50sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry">

                </EditText>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <Button
                        android:id="@+id/plus"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/gray"
                        android:text="@string/minus"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:targetApi="lollipop" />

                    <Button
                        android:id="@+id/minus"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/plus"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/gray"
                        android:textSize="20sp"
                        android:text="@string/plus"
                        android:textColor="@color/black"
                        tools:targetApi="lollipop" />

                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/order"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/gray"
                android:text="@string/order"
                android:textColor="@color/white"
                tools:targetApi="lollipop" />


        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>